- bug fix for "diff" and "ldiff" commands with panel data in the
  form of stacked cross-sections
- plain text output: give option of copying as RTF (puts the
  output into Courier New at 9 points)
- in gui, disallow deleting variables when sub-sampled
- setobs command: be more flexible in regard to the format of
  the "startobs" field
- saving text files: try to improve handling of CR/LF

3/30/2004 version 1.2.4
- Add ARMAX models: ARMA with exogenous variables
- Add GARCH models, using Fiorentini-Calzolari-Panattoni approach
  (Journal of Applied Econometrics, 1996)
- Add "resample" function to genr, for bootstrapping test
  statistics
- Loops: allow use of a variable name rather than a number to
  control a "number of times" loop
- Fix genr bug: problem with an undefined varname in a lag
  context 
- Fix bug: when saved via the objectname mechanism, arma models
  were appearing both as saved models and as saved text
- Fix bug: autocorrelation test from model window Tests menu
  was broken by new options mechanism
- Fix bug: "--verbose" option for Johansen test was broken
- Fix curious Windows bug: line-endings in scripts were not
  recognized in some cases
- Improve path-searching for data files
- Beef up error-checking on opening of native gretl data files
- Improve error-checking on pvalue command
- Fix for Excel importer: allow more than 16K rows
- Error-checking for new varname in genr
- Add robust standard errors/VCV for tsls command
- Allow use of wls command in a loop
- CSV import: add automatic conversion of string variables
  to code numbers
- Add Three-Stage Least Squares (system type=3sls): this is
  still at the testing stage

2/24/2004 version 1.2.3
- Add Tobit model command, with a new plugin (thanks to Jack
  Lucchetti)
- Add color selector for the histogram in frequency plots
- Allow appending/merging of gretl-format data in GUI program
- Fix bug: genr was broken for some special cases of
  repeated function calls